--- a/src/Castle.Components.DictionaryAdapter.Tests/Castle.Components.DictionaryAdapter.Tests-vs2008.csproj
+++ b/src/Castle.Components.DictionaryAdapter.Tests/Castle.Components.DictionaryAdapter.Tests-vs2008.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{280217E9-688D-4F02-B64A-78D2B3AA7BAB}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -51,7 +51,7 @@
   <ItemGroup>
     <Reference Include="nunit.framework, Version=2.2.8.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\SharedLibs\nunit.framework.dll</HintPath>
+      <HintPath>..\..\lib\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
