Added more fine-grained fetching support
git-svn-id: http://svn.castleproject.org:8080/svn/castle/Components/DictionaryAdapter/trunk@6135 73e77b4c-caa6-f847-a29a-24ab75ae54b6

--- a/src/Castle.Components.DictionaryAdapter/Castle.Components.DictionaryAdapter-vs2008.csproj
+++ b/src/Castle.Components.DictionaryAdapter/Castle.Components.DictionaryAdapter-vs2008.csproj
@@ -63,6 +63,7 @@
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="AbstractDictionaryAdapter.cs" />
     <Compile Include="Attributes\AttributesUtil.cs" />
+    <Compile Include="Attributes\FetchAttribute.cs" />
     <Compile Include="Attributes\MultiLevelEditAttribute.cs" />
     <Compile Include="Attributes\DictionaryAdapterAttribute.cs" />
     <Compile Include="Attributes\OnDemandAttribute.cs" />
