Added support for validation groupings.  This is very useful when your interfaces have different boundaries than the context (i.e. multiple views for an interface ala wizards)
git-svn-id: http://svn.castleproject.org:8080/svn/castle/Components/DictionaryAdapter/trunk@6138 73e77b4c-caa6-f847-a29a-24ab75ae54b6

--- a/src/Castle.Components.DictionaryAdapter/Castle.Components.DictionaryAdapter-vs2008.csproj
+++ b/src/Castle.Components.DictionaryAdapter/Castle.Components.DictionaryAdapter-vs2008.csproj
@@ -63,6 +63,7 @@
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="AbstractDictionaryAdapter.cs" />
     <Compile Include="Attributes\AttributesUtil.cs" />
+    <Compile Include="Attributes\GroupAttribute.cs" />
     <Compile Include="Attributes\FetchAttribute.cs" />
     <Compile Include="Attributes\MultiLevelEditAttribute.cs" />
     <Compile Include="Attributes\DictionaryAdapterAttribute.cs" />
@@ -77,6 +78,7 @@
     <Compile Include="Attributes\StringValuesAttribute.cs" />
     <Compile Include="CascadingDictionaryAdapter.cs" />
     <Compile Include="DictionaryDescriptor.cs" />
+    <Compile Include="DictionaryValidateGroup.cs" />
     <Compile Include="Util\DynamicValue.cs" />
     <Compile Include="Util\DynamicValueDelegate.cs" />
     <Compile Include="Util\EditableBindingList.cs" />
