- Group meta and instance properties together to avoid conflict with user defined properties - Standardize edit and non-edit mode so that notifications occur consistently
git-svn-id: http://svn.castleproject.org:8080/svn/castle/Components/DictionaryAdapter/trunk@6336 73e77b4c-caa6-f847-a29a-24ab75ae54b6

--- a/src/Castle.Components.DictionaryAdapter/Castle.Components.DictionaryAdapter-vs2008.csproj
+++ b/src/Castle.Components.DictionaryAdapter/Castle.Components.DictionaryAdapter-vs2008.csproj
@@ -78,6 +78,8 @@
     <Compile Include="Attributes\DictionaryComponentAttribute.cs" />
     <Compile Include="Attributes\StringValuesAttribute.cs" />
     <Compile Include="CascadingDictionaryAdapter.cs" />
+    <Compile Include="DictionaryAdapterInstance.cs" />
+    <Compile Include="DictionaryAdapterMeta.cs" />
     <Compile Include="DictionaryDescriptor.cs" />
     <Compile Include="DictionaryValidateGroup.cs" />
     <Compile Include="Util\DynamicValue.cs" />
